#add_definitions(-fprofile-arcs -ftest-coverage)
file(GLOB_RECURSE SRCS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
foreach(SRC ${SRCS})
    get_filename_component(BIN ${SRC} NAME_WE)
    add_executable(${BIN} ${SRC})
    add_test(${BIN} ${BIN})
    target_link_libraries(${BIN} addp)
    #target_link_libraries(${BIN} -fprofile-arcs)
endforeach(SRC ${SRCS})
